Change cleaned data

--- a/Process.ipynb
+++ b/Process.ipynb
@@ -255,6 +255,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Lasso\n",
+    "\n",
+    "reg = Lasso(alpha=1)\n",
+    "reg.fit(x_train, y_train)\n",
+    "\n",
+    "Lasso(alpha=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
