Add new preprocessed training data

--- a/Process.ipynb
+++ b/Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -10,19 +10,26 @@
      "output_type": "stream",
      "text": [
       "Reading test data... success\n",
-      "   instant  season  yr  mnth  weathersit     temp     atemp        hum  \\\n",
-      "0      299     4.0   0    10           2  19.3667  0.472846  108.06255   \n",
-      "1      458     2.0   1     4           1  17.3565  0.427513   75.65220   \n",
-      "2      687     4.0   1    11           1  13.0000  0.326383   81.81255   \n",
-      "3      606     3.0   1     8           1  29.1333  0.666050   93.00000   \n",
-      "4      583     3.0   1     8           1  30.7667  0.731079   97.87500   \n",
+      "   instant      dteday  season  yr  mnth  holiday  weekday  workingday  \\\n",
+      "0      299  26.10.2011     4.0   0    10        0        3           1   \n",
+      "1      458  02.04.2012     2.0   1     4        0        1           1   \n",
+      "2      687  17.11.2012     4.0   1    11        0        6           0   \n",
+      "3      346  12.12.2011     4.0   0    12        0       -1           1   \n",
+      "4      291  18.10.2011     4.0   0    10        0        2           1   \n",
       "\n",
-      "   windspeed  outlier   cnt  \n",
-      "0   0.148642    False  3894  \n",
-      "1   0.312139    False  5936  \n",
-      "2   0.179729    False  5629  \n",
-      "3   0.190925    False  7040  \n",
-      "4   0.290421    False  5464  \n",
+      "   weathersit     temp     atemp        hum  windspeed  leaflets  \\\n",
+      "0           2  19.3667  0.472846  108.06255   0.148642       605   \n",
+      "1           1  17.3565  0.427513   75.65220   0.312139       518   \n",
+      "2           1  13.0000  0.326383   81.81255   0.179729       766   \n",
+      "3           1   9.5333  0.270196        NaN   0.063450       739   \n",
+      "4           2  21.3000  0.522721  105.25005   0.110087       463   \n",
+      "\n",
+      "   price reduction  casual  registered   cnt  \n",
+      "0                0     404        3490  3894  \n",
+      "1                0    1208        4728  5936  \n",
+      "2                0    1313        4316  5629  \n",
+      "3                0     143        3167  3310  \n",
+      "4                0     637        4111  4748  \n",
       "\n",
       "Reading training data... success\n",
       "   instant      dteday  season  yr  mnth  holiday  weekday  workingday  \\\n",
@@ -45,14 +52,16 @@
       "2                0      89        2147  2236  \n",
       "3                0    1198        5172  6370  \n",
       "4                1    3155        4681  7836  \n",
-      "[3894 5936 5629 7040 5464 7580 6883 2432 5375 6227 7852 1115 4687 2056\n",
-      " 4484 5302 4220 4911 6734 6234 7105 7538 1421 1817 2431 5202 5538 1550\n",
-      " 2485 4342 4036  683 3644 7534 7363 4401 3387 5102 5698 5668 3846 6772\n",
-      " 1263 6230 4996 5557 3389 5312 3570 1204 7444 3910 1712 2077 5501 3649\n",
-      " 6569 4390 4105 4326 4672 7509 6784 4570 3115 1416 7410 6233 1796 6241\n",
-      " 1536 7591 7261 5611 3956 5117 2169 6606 6917 3351 3510 7282 3727 7350\n",
-      " 7582 1693 1510 3126 5740  431 7446 3228 1685 1708 6639 4990 5687 5225\n",
-      " 1977]\n"
+      "[ 3894  5936  5629  4748  1450  7040  6778  5119  4332  5115  6598  2496\n",
+      "  5464  6118  7580  6883  2432  5375  6227  7852  1115  4687  2056  4484\n",
+      "  5302  4220  4911  6734  6234  7105  7538  1421  1817  2134  2431  5202\n",
+      "  5538  1550  2485  4342  4036   683  3644  7534  7363  4401  3387  3523\n",
+      "  5102  5698  3577  5668  3846  6772  1263  3422  6230  4996  5557  3389\n",
+      "  5312  3570  1204  7444  3910  1712  2077  5501  3649  6569  4390  4105\n",
+      "  4326  4672  7509  6784  4570  3115  1416 32472  7410  6233  1796  6241\n",
+      "  1536  7591  7261  5611  3956  5117  2169  6606  6917  3351  3510  7282\n",
+      "  3727  7350  7582  1693  1510  3126  5805  5740   431  7446  3228  1685\n",
+      "  1708  6639  4990  5687  3907  5225  1977]\n"
      ]
     }
    ],
@@ -95,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -105,22 +114,9 @@
       "Regression coefficients:  [ 3.18566949e+00  4.33605041e+02  1.43225831e+03 -9.09070082e+01\n",
       " -3.46868441e+02  2.16426861e+02 -8.12964412e+02 -1.73078685e+01\n",
       "  7.68879010e+03 -6.39160185e+00 -7.96617822e+02  1.24566695e+00\n",
-      "  3.53239330e+02]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "X has 9 features, but LinearRegression is expecting 13 features as input.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/hw/djqz0cbd507b5pxvx63rrmjh0000gn/T/ipykernel_20537/2942727897.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#Predict all test examples\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mypred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;31m#Show first 10 prediction results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mypred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    360\u001b[0m             \u001b[0mReturns\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    361\u001b[0m         \"\"\"\n\u001b[0;32m--> 362\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_decision_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    363\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m     \u001b[0m_preprocess_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstaticmethod\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_preprocess_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36m_decision_function\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    343\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    344\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 345\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"csr\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"csc\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"coo\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    346\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msafe_sparse_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdense_output\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintercept_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_validate_data\u001b[0;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[1;32m    583\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    584\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mno_val_X\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcheck_params\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ensure_2d\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 585\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_n_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    586\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    587\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/sklearn/base.py\u001b[0m in \u001b[0;36m_check_n_features\u001b[0;34m(self, X, reset)\u001b[0m\n\u001b[1;32m    398\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    399\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mn_features\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_features_in_\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 400\u001b[0;31m             raise ValueError(\n\u001b[0m\u001b[1;32m    401\u001b[0m                 \u001b[0;34mf\"X has {n_features} features, but {self.__class__.__name__} \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    402\u001b[0m                 \u001b[0;34mf\"is expecting {self.n_features_in_} features as input.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: X has 9 features, but LinearRegression is expecting 13 features as input."
+      "  3.53239330e+02]\n",
+      "[3461.96816881 5113.86334843 6829.2424422  3441.87832922  693.48368454\n",
+      " 7766.68631883 5914.06641946 6491.26617919 6290.00467492 5437.00330095]\n"
      ]
     }
    ],
@@ -141,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -163,22 +159,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.54000e+02 2.00000e+00 0.00000e+00 ... 2.53121e-01 9.91000e+02\n",
+      "  0.00000e+00]\n",
+      " [6.85000e+02 4.00000e+00 1.00000e+00 ... 1.52987e-01 6.01000e+02\n",
+      "  0.00000e+00]\n",
+      " [3.68000e+02 1.00000e+00 1.00000e+00 ... 3.65671e-01 5.49000e+02\n",
+      "  0.00000e+00]\n",
+      " ...\n",
+      " [3.77000e+02 1.00000e+00 1.00000e+00 ... 1.80967e-01 5.20000e+02\n",
+      "  0.00000e+00]\n",
+      " [2.99000e+02 4.00000e+00 0.00000e+00 ... 1.48642e-01 6.05000e+02\n",
+      "  0.00000e+00]\n",
+      " [4.97000e+02 2.00000e+00 1.00000e+00 ... 2.36937e-01 5.70000e+02\n",
+      "  1.00000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Visualize linear regression results\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def viz_linear():\n",
-    "    plt.scatter(x_train, y_train, color='red')\n",
-    "    plt.plot(x_train, reg.predict(x_train), color='blue')\n",
-    "    plt.title('Truth or Bluff (Linear Regression)')\n",
-    "    plt.xlabel('Position level')\n",
-    "    plt.ylabel('Salary')\n",
-    "    plt.show()\n",
-    "    return\n",
-    "# viz_linear()"
+    "# def viz_linear():\n",
+    "#     plt.scatter(x_train, y_train, color='red')\n",
+    "#     plt.plot(x_train, reg.predict(x_train), color='blue')\n",
+    "#     plt.title('Truth or Bluff (Linear Regression)')\n",
+    "#     plt.xlabel('Position level')\n",
+    "#     plt.ylabel('Salary')\n",
+    "#     plt.show()\n",
+    "#     return\n",
+    "# viz_linear()\n",
+    "\n",
+    "plt.style.use('default')\n",
+    "plt.style.use('ggplot')\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 4))\n",
+    "\n",
+    "ax.plot(x_train, ypred, color='k', label='Regression model')\n",
+    "ax.scatter(X, y_test, edgecolor='k', facecolor='grey', alpha=0.7, label='Sample data')\n",
+    "ax.set_ylabel('Gas production (Mcf/day)', fontsize=14)\n",
+    "ax.set_xlabel('Porosity (%)', fontsize=14)\n",
+    "ax.text(0.8, 0.1, 'aegis4048.github.io', fontsize=13, ha='center', va='center',\n",
+    "         transform=ax.transAxes, color='grey', alpha=0.5)\n",
+    "ax.legend(facecolor='white', fontsize=11)\n",
+    "ax.set_title('$R^2= %.2f$' % r2, fontsize=18)\n",
+    "\n",
+    "fig.tight_layout()"
    ]
   },
   {
@@ -349,7 +381,7 @@
        "3                   Lasso   1071.903613"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
